# tinker-gui

./: .gitignore  LICENSE  README.md  babel.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
.github/workflows/: release.yml
app/: app.global.css  app.html  composer.json  index.js  main.dev.js
app/ui/: Editor.js  Root.js  Terminal.js  language-client.js  patch-vscode.js  useResize.js
app/utils/: createWindow.js  generateMenu.js  getCwd.js  loadCompletions.js  mode.js  startWorkers.js
app/workers/: language-server.js  tinker.js
configs/: webpack.config.base.js  webpack.config.main.prod.babel.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.dev.dll.babel.js  webpack.config.renderer.prod.babel.js  webpack.config.resolve.js
internals/scripts/: CheckBuiltsExist.js  CheckNodeEnv.js  CheckPortInUse.js
mac/: entitlements.mac.plist  notarize.js
src/: App.tsx  Editor.tsx  Loading.tsx  Root.tsx  Terminal.tsx  Tinker.tsx  disposables.ts  main.tsx  registerLanguage.ts  tailwind.ts  useBufferedCallback.ts  useEditorValue.ts  usePty.ts  useResize.ts  useTauriEventListener.ts  useTerminal.ts  useTinker.ts  useWorkingDirectory.ts  useXterm.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
